--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,13 @@ version: '3.9'
 
 services:
     nginx:
-        image: 'fabiosereno/portfolio.nginx:0.0.3'
+        image: 'fabiosereno/portfolio.nginx:0.0.5'
         ports:
-            - '8080:80'
+            - '80:80'
         container_name: nginx
+    api:
+        tty: true
+        image: 'fabiosereno/portfolio.api:0.0.5'
+        ports:
+            - "3000:3000"
+        container_name: api
